--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1> Hello </h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Teagan Horkan</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
+    <body>
+        <header>No Work Zone</header>
+        <section id="bio">
+            <!-- <img src="headshot" -->
+            <h1>Bio</h1>
+            <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
+            <p>I am a Senior at the University of Washington, majoring in Computer Engineering.</p>
+            <p>Some of my hobbies, technical and non-technical are:</p>
+            <ul>
+                <li>python programming</li>
+                <li>reading random wikipedia articles</li>
+                <li>video games</li>
+                <li>hiking</li>
+                <li>camping</li>
+                <li>backpacking</li>
+                <li>eating</li>
+            </ul>
+        </section>
+        <section id="resume">
+            <h1>Resume</h1>
+            <!-- Insert Link -->
+        </section>
+
+    </body>
+</html>
