added project sections

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Create by Teagan Horkan 2019 -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,10 +6,9 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        <header>No Work Zone</header>
         <section id="bio">
             <!-- <img src="headshot" -->
-            <h1>Bio</h1>
+            <h1>About Me</h1>
             <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
             <p>I am a Senior at the University of Washington, majoring in Computer Engineering.</p>
             <p>Some of my hobbies, technical and non-technical are:</p>
@@ -17,14 +17,48 @@
                 <li>reading random wikipedia articles</li>
                 <li>video games</li>
                 <li>hiking</li>
-                <li>camping</li>
-                <li>backpacking</li>
+                <li>camping, backpacking</li>
                 <li>eating</li>
+                <li>CAD, 3d printing, laser cutting</li>
+                <li>soccer</li>
             </ul>
         </section>
         <section id="resume">
             <h1>Resume</h1>
             <!-- Insert Link -->
+            <a href="TeaganHorkanResume_2019_2.pdf">pdf</a>
+        </section>
+        <section id="projects">
+            <h1>Current/Complete Projects</h1>
+            <ul>
+                <li>
+                    <h2>Bezier Curve Drawing Library (WIP)</h2>
+                    <p>Made with: Python, pyglet</p>
+                    <a href="https://github.com/tgnhrkn/bez" >GitHub</a>
+                </li>
+                <li>
+                    <h2>Parallel 2048 Bot</h2>
+                    <p>Made with: Python, numpy, curses</p>
+                    <a href="https://github.com/tgnhrkn/2048">GitHub</a>
+                </li>
+                <li>
+                    <h2>Maze Maker</h2>
+                    <p>Made with: Processing</p>
+                </li>
+            </ul>
+        </section>
+        <section id="ideas">
+            <h1>Future Projects</h1>
+            <ul id="future-project-list" >
+                <li>
+                    <h2>Vim Shifter</h2>
+                    <p>Basically this would be like a car transmission knob, but hooked up to vim so that you could shift in and out of different modes, but with the shifter.</p>
+                </li>
+                <li>
+                    <h2>No GFX Laptop</h2>
+                    <p>Take a nice laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
+                </ul>
+            </ul>
         </section>
 
     </body>
