--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li>
                     <h2>Maze Maker</h2>
                     <p>Made with: Processing</p>
+                    <a href="https://github.com/tgnhrkn/processingmaze">GitHub</a>
                 </li>
             </ul>
         </section>
