added some project ideas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <!-- <img src="headshot" -->
             <h1>About Me</h1>
             <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
-            <p>I am a Senior at the University of Washington, majoring in Computer Engineering.</p>
+            <p>I am a Senior at the University of Washington, majoring in Computer Engineering. If you cannot tell, this site is a work in progress. (Who needs CSS anyways?)</p>
             <p>Some of my hobbies, technical and non-technical are:</p>
             <ul>
                 <li>python programming</li>
@@ -57,7 +57,15 @@
                 <li>
                     <h2>No GFX Laptop</h2>
                     <p>Take a nice laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
-                </ul>
+                </li>
+                <li>
+                    <h2>BrainF*** Visualizer</h2>
+                    <p>Given the small number of commands, this should not be that difficult to implement.</p>
+                </li>
+                <li>
+                    <h2>HTMLang</h2>
+                    <p>That's right, make a compiler or interpreter for a programming language based on only valid HTML syntax.</p>
+                </li>
             </ul>
         </section>
 
