--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                     <p>Made with: Processing</p>
                     <a href="https://github.com/tgnhrkn/processingmaze">GitHub</a>
                 </li>
+                <li>
+                    <h2>BrainF*** Visual Interpreter</h2>
+                    <p>Made with: HTML5 Canvas, Javascript</p>
+                    <p>Created this between the hours of 3AM and 5:45AM with reckless abandon. Try the hello world program from <a href=www.en.wikipedia.org/wiki/Brainfuck>wikipedia</a>.</p>
+                    <a href="https://codepen.io/tgnhrkn/full/gOOWMaM">CodePen</a>
+                </li>
+                </li>
             </ul>
         </section>
         <section id="ideas">
@@ -58,10 +65,6 @@
                 <li>
                     <h2>No GFX Laptop</h2>
                     <p>Take a nice laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
-                </li>
-                <li>
-                    <h2>BrainF*** Visualizer</h2>
-                    <p>Given the small number of commands, this should not be that difficult to implement.</p>
                 </li>
                 <li>
                     <h2>HTMLang</h2>
