added some text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             <!-- <img src="headshot" -->
             <h1>About Me</h1>
             <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
-            <p>I am a Senior at the University of Washington, majoring in Computer Engineering. If you cannot tell, this site is a work in progress. (Who needs CSS anyways?)</p>
+            <p>I am a Senior at the University of Washington, majoring in Computer Engineering.</p>
+            <p>If you cannot tell, this site is a work in progress (Who needs CSS anyways?). The reasons for this are 1) I don't really want to put effort into styling things until I have a layout in mind and 2) I want to find a way to embed (not just hyperlink) all or most of my projects into the page. </p>
             <p>Some of my hobbies, technical and non-technical are:</p>
             <ul>
                 <li>python programming</li>
