--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <!-- <img src="headshot" -->
             <h1>About Me</h1>
             <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
-            <p>I am a Senior at the University of Washington, majoring in Computer Engineering.</p>
-            <p>If you cannot tell, this site is a work in progress (Who needs CSS anyways?). The reasons for this are 1) I don't really want to put effort into styling things until I have a layout in mind and 2) I want to find a way to embed (not just hyperlink) all or most of my projects into the page. </p>
+            <p>I am a Software Engineer at Convoy, working on improving the efficiency of freight.</p>
+            <p>If you cannot tell, this site is a work in progress (Who needs CSS anyways?).</p>
             <p>Some of my hobbies, technical and non-technical are:</p>
             <ul>
                 <li>python programming</li>
@@ -61,15 +61,15 @@
             <ul id="future-project-list" >
                 <li>
                     <h2>Vim Shifter</h2>
-                    <p>Basically this would be like a car transmission knob, but hooked up to vim so that you could shift in and out of different modes, but with the shifter.</p>
+                    <p>Basically this would be like a car transmission knob, but hooked up to vim so that you could physically shift in and out of different modes.</p>
                 </li>
                 <li>
-                    <h2>No GFX Laptop</h2>
-                    <p>Take a nice laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
+                    <h2>Laptop from scratch</h2>
+                    <p>Take a laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
                 </li>
                 <li>
                     <h2>HTMLang</h2>
-                    <p>That's right, make a compiler or interpreter for a programming language based on only valid HTML syntax.</p>
+                    <p>An XML syntax with semantics similar to C.</p>
                 </li>
             </ul>
         </section>
