--- a/index.html
+++ b/index.html
@@ -1,78 +1,84 @@
 <!-- Create by Teagan Horkan 2019 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Teagan Horkan</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-    </head>
-    <body>
-        <section id="bio">
-            <!-- <img src="headshot" -->
-            <h1>About Me</h1>
-            <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and anything else interesting I decide to put up here!</p>
-            <p>I am a Software Engineer at Convoy, working on improving the efficiency of freight.</p>
-            <p>If you cannot tell, this site is a work in progress (Who needs CSS anyways?).</p>
-            <p>Some of my hobbies, technical and non-technical are:</p>
-            <ul>
-                <li>python programming</li>
-                <li>reading random wikipedia articles</li>
-                <li>video games</li>
-                <li>hiking</li>
-                <li>camping, backpacking</li>
-                <li>eating</li>
-                <li>CAD, 3d printing, laser cutting</li>
-                <li>soccer</li>
-            </ul>
-        </section>
-        <section id="resume">
-            <h1>Resume</h1>
-            <!-- Insert Link -->
-            <a href="TeaganHorkanResume_2019_2.pdf">pdf</a>
-        </section>
-        <section id="projects">
-            <h1>Current/Complete Projects</h1>
-            <ul>
-                <li>
-                    <h2>Bezier Curve Drawing Library (WIP)</h2>
-                    <p>Made with: Python, pyglet</p>
-                    <a href="https://github.com/tgnhrkn/bez" >GitHub</a>
-                </li>
-                <li>
-                    <h2>Parallel 2048 Bot</h2>
-                    <p>Made with: Python, numpy, curses</p>
-                    <a href="https://github.com/tgnhrkn/2048">GitHub</a>
-                </li>
-                <li>
-                    <h2>Maze Maker</h2>
-                    <p>Made with: Processing</p>
-                    <a href="https://github.com/tgnhrkn/processingmaze">GitHub</a>
-                </li>
-                <li>
-                    <h2>BrainF*** Visual Interpreter</h2>
-                    <p>Made with: HTML5 Canvas, Javascript</p>
-                    <p>Created this between the hours of 3AM and 5:45AM with reckless abandon. Try the hello world program from <a href=www.en.wikipedia.org/wiki/Brainfuck>wikipedia</a>.</p>
-                    <a href="https://codepen.io/tgnhrkn/full/gOOWMaM">CodePen</a>
-                </li>
-                </li>
-            </ul>
-        </section>
-        <section id="ideas">
-            <h1>Future Projects</h1>
-            <ul id="future-project-list" >
-                <li>
-                    <h2>Vim Shifter</h2>
-                    <p>Basically this would be like a car transmission knob, but hooked up to vim so that you could physically shift in and out of different modes.</p>
-                </li>
-                <li>
-                    <h2>Laptop from scratch</h2>
-                    <p>Take a laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get a shell. Then write a set of productivity tools that are only shell based (web browser, messaging client, etc... )</p>
-                </li>
-                <li>
-                    <h2>HTMLang</h2>
-                    <p>An XML syntax with semantics similar to C.</p>
-                </li>
-            </ul>
-        </section>
 
-    </body>
+<head>
+    <title>Teagan Horkan</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
+<body>
+    <section id="bio">
+        <!-- <img src="headshot" -->
+        <h1>About Me</h1>
+        <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and
+            anything else interesting I decide to put up here!</p>
+        <p>I am a Software Engineer at Convoy, working on improving the efficiency of freight.</p>
+        <p>If you cannot tell, this site is a work in progress.</p>
+        <p>Some of my hobbies, technical and non-technical are:</p>
+        <ul>
+            <li>python programming</li>
+            <li>reading</li>
+            <li>video games</li>
+            <li>hiking</li>
+            <li>camping, backpacking</li>
+            <li>CAD, 3d printing</li>
+            <li>soccer</li>
+        </ul>
+    </section>
+    <section id="resume">
+        <h1>Resume</h1>
+        <!-- Insert Link -->
+        <a href="TeaganHorkanResume_2019_2.pdf">pdf</a>
+    </section>
+    <section id="projects">
+        <h1>Current/Complete Projects</h1>
+        <ul>
+            <li>
+                <h2>Bezier Curve Drawing Library (WIP)</h2>
+                <p>Made with: Python, pyglet</p>
+                <a href="https://github.com/tgnhrkn/bez">GitHub</a>
+            </li>
+            <li>
+                <h2>2048 Bot</h2>
+                <p>Made with: Python, numpy, curses</p>
+                <a href="https://github.com/tgnhrkn/2048">GitHub</a>
+            </li>
+            <li>
+                <h2>Maze Maker</h2>
+                <p>Made with: Processing</p>
+                <a href="https://github.com/tgnhrkn/processingmaze">GitHub</a>
+            </li>
+            <li>
+                <h2>BrainF*** Visual Interpreter</h2>
+                <p>Made with: HTML5 Canvas, Javascript</p>
+                <p>Try the hello world program from <a href=https://www.en.wikipedia.org/wiki/Brainfuck>wikipedia</a>.
+                </p>
+                <a href="https://codepen.io/tgnhrkn/full/gOOWMaM">CodePen</a>
+            </li>
+        </ul>
+    </section>
+    <section id="ideas">
+        <h1>Future Projects</h1>
+        <ul id="future-project-list">
+            <li>
+                <h2>Vim Shifter</h2>
+                <p>Basically this would be like a car transmission knob, but hooked up to vim so that you could
+                    physically shift in and out of different modes.</p>
+            </li>
+            <li>
+                <h2>Laptop from scratch</h2>
+                <p>Take a laptop, strip it of any graphical capabilities, write an os, display driver, etc, just to get
+                    a shell. Then write a set of productivity tools that are only shell based (web browser, messaging
+                    client, etc... )</p>
+            </li>
+            <li>
+                <h2>HTMLang</h2>
+                <p>An XML syntax with semantics similar to C.</p>
+            </li>
+        </ul>
+    </section>
+
+</body>
+
 </html>
