--- a/index.html
+++ b/index.html
@@ -11,20 +11,6 @@
     <section id="bio">
         <!-- <img src="headshot" -->
         <h1>About Me</h1>
-        <p>Hi! You've reached the website for Teagan Horkan, that's me! From here you can find my resume, projects, and
-            anything else interesting I decide to put up here!</p>
-        <p>I am a Software Engineer at Convoy, working on improving the efficiency of freight.</p>
-        <p>If you cannot tell, this site is a work in progress.</p>
-        <p>Some of my hobbies, technical and non-technical are:</p>
-        <ul>
-            <li>python programming</li>
-            <li>reading</li>
-            <li>video games</li>
-            <li>hiking</li>
-            <li>camping, backpacking</li>
-            <li>CAD, 3d printing</li>
-            <li>soccer</li>
-        </ul>
     </section>
     <section id="resume">
         <h1>Resume</h1>
@@ -55,6 +41,14 @@
                 <p>Try the hello world program from <a href=https://www.en.wikipedia.org/wiki/Brainfuck>wikipedia</a>.
                 </p>
                 <a href="https://codepen.io/tgnhrkn/full/gOOWMaM">CodePen</a>
+            </li>
+        </ul>
+    </section>
+    <section id="wip">
+        <h1>WIP</h1>
+        <ul>
+            <li>
+                <a href="./sfx.html" >SFX</a>
             </li>
         </ul>
     </section>
