--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
             </li>
         </ul>
     </section>
+    <section id="chatgpt">
+        <h1>code written by chatgpt</h1>
+        <ul>
+            <li>
+                <a href="./guess.html" >Guessing Game</a>
+            </li>
+        </ul>
+    </section>
     <section id="ideas">
         <h1>Future Projects</h1>
         <ul id="future-project-list">
