--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <li>
                 <a href="./guess.html" >Guessing Game</a>
             </li>
+            <li>
+                <a href="./dnd.html" >Guessing Game</a>
+            </li>
         </ul>
     </section>
     <section id="ideas">
