--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="./guess.html" >Guessing Game</a>
             </li>
             <li>
-                <a href="./dnd.html" >Guessing Game</a>
+                <a href="./dnd.html" >DnD dice roller</a>
             </li>
         </ul>
     </section>
